--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Playfair+Display|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anaheim|Kosugi+Maru" rel="stylesheet">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
